@@ -1,6 +1,7 @@
 cm4all-myproxy (0.13) unstable; urgency=low
 
   * lua: close Lua file descriptors when connection is closed
+  * lua: refactor the cgroup API
 
  --   
 
